# CMake_wxWidgets_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
